--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
     "express-rate-limit": "^5.2.6"
-
   },
   "eslintConfig": {
     "extends": [
@@ -58,5 +57,6 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "morgan": "^1.10.0"
-  }
+  },
+  "proxy": "http://domain-a.com"
 }
