--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start:server": "node ./server.js",
-    "dev": "concurrently --kill-others \"npm run start:server\" \"npm run start\""
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -50,13 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "concurrently": "^7.5.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.3",
-    "morgan": "^1.10.0"
   },
   "proxy": "http://domain-a.com"
 }
