--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -18,6 +17,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "express-rate-limit": "^5.2.6",
     "libphonenumber-js": "^1.10.14",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
@@ -28,8 +28,7 @@
     "react-scripts": "5.0.1",
     "react-sweetalert2": "^0.5.2",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
-    "express-rate-limit": "^5.2.6"
+    "yup": "^0.32.11"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +48,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://domain-a.com"
+  "proxy": "http://domain-a.com",
+  "devDependencies": {
+    "react-app-rewire-alias": "^1.1.7",
+    "react-app-rewired": "^2.2.1"
+  }
 }
