--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "jsx": "react",
     "baseUrl": ".",
     "paths": {
       "$components/*": [
@@ -7,6 +8,9 @@
       ],
       "$common/*": [
         "src/common/*"
+      ],
+      "pages/*": [
+        "src/pages/*"
       ]
     }
   }
