added not found page

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,7 @@
       "$common/*": [
         "src/common/*"
       ],
-      "pages/*": [
+      "$pages/*": [
         "src/pages/*"
       ]
     }
